--- a/Passtimes/Passtimes/Base.lproj/Navigation.storyboard
+++ b/Passtimes/Passtimes/Base.lproj/Navigation.storyboard
@@ -21,8 +21,9 @@
                     </tabBar>
                     <connections>
                         <segue destination="baa-d4-fBd" kind="relationship" relationship="viewControllers" id="b5O-Yq-nee"/>
-                        <segue destination="40x-yZ-zD0" kind="relationship" relationship="viewControllers" id="1sU-Cn-CJ5"/>
-                        <segue destination="tvf-cb-hem" kind="relationship" relationship="viewControllers" id="BVK-yj-oT7"/>
+                        <segue destination="ral-Nf-fYg" kind="relationship" relationship="viewControllers" id="gAa-xA-J2b"/>
+                        <segue destination="40x-yZ-zD0" kind="relationship" relationship="viewControllers" id="EyR-uJ-X89"/>
+                        <segue destination="tvf-cb-hem" kind="relationship" relationship="viewControllers" id="77e-h5-za0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h15-XY-yvr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -57,7 +58,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ta1-so-A0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="106" y="-182"/>
+            <point key="canvasLocation" x="106" y="-159"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="XJ0-kc-A0E">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Search" id="ral-Nf-fYg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="dC8-xw-log"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="169-Og-OSz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="79" y="-201"/>
         </scene>
     </scenes>
 </document>
