--- a/Passtimes/Passtimes/Feed.storyboard
+++ b/Passtimes/Passtimes/Feed.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Feed View Controller-->
+        <!--Passtime-->
         <scene sceneID="vg6-9s-tqK">
             <objects>
                 <viewController id="9Ws-5t-fJj" customClass="FeedViewController" customModule="Passtimes" customModuleProvider="target" sceneMemberID="viewController">
@@ -105,7 +105,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9TM-US-UEG"/>
                     </view>
-                    <navigationItem key="navigationItem" id="CX5-6q-kcd">
+                    <navigationItem key="navigationItem" title="Passtime" id="CX5-6q-kcd">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="oyg-8z-ak5">
                             <color key="tintColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
